...
    if (!path) return false
    const firstSegment = path.split('/')[0]
    switch (firstSegment) {
      case 'activate': {
        router.replace('/(tabs)/wallet')
        setTimeout(() => {
          Alert.alert('Abonnement activé', 'Tes gains sont débloqués 🎉')
        }, 400)
        return true
      }
      case 'wallet':
        router.replace('/(tabs)/wallet')
        return true
...
